2007-04-27  Dmitry Galinsky  <dima.exe@gmail.com>

	* rails.el: raise a error if emacs-rails run on old version of Emacs (less 22).

	* rails-ruby.el: check available flymake before setup ruby-flymake.

2007-04-25  Dmitry Galinsky  <dima.exe@gmail.com>

	* rails-speedbar-feature.el (rails-speedbar:expand-directory)
	(rails-speedbar:display): updated view mode of "views".

	* rails-compat.el (try-complete-abbrev): don't expand a snippet inside comments or strings.

2007-04-20  Dmitry Galinsky  <dima.exe@gmail.com>

	* rails-core.el (rails-core:menu-letters-list)
	(rails-core:prepare-menu): created, append a prefix to each label of menu-item from MENU.

2007-04-19  Dmitry Galinsky  <dima.exe@gmail.com>

	* rails-speedbar-feature.el (rails-speedbar:expand-tags): append list of templates in controllers
	(rails-speedbar:line-directory): created

	* rails-core.el (rails-core:helper-file): append the test/test_helper
	(rails-core:views-dir): strip the "_controller" sufix
	(rails-core:helpers): added the test/test_helper support

	* rails-speedbar-feature.el (rails-speedbar:line-directory)
	(rails-speedbar:root, rails-speedbar:in-root): created
	(rails-speedbar-feature:install): install speedbar-mode-line-functions

	* rails-ruby.el (completion-dynamic-syntax-alist): removed

	* rails-core.el (rails-core:class-by-file): updated

2007-04-18  Dmitry Galinsky  <dima.exe@gmail.com>

	* rails.el (ruby-mode-hook): removed predictive-prog-mode, it will incorect work in latest CVS builds of Emacs

2007-04-13  Dmitry Galinsky  <dima.exe@gmail.com>

	* rails-ruby.el (flymake-ruby-init): apply patch #10056, thanks Rémi Vanicat

	* rails-core.el (rails-core:class-by-file): handle first digit[s] in filename

	* rails-lib.el (capital-word-p): return nil if first char is not 

	* inflections.el: rollback to using separate variables instead of structure

2007-04-12  Dmitry Galinsky  <dima.exe@gmail.com>
